--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!doctype html>
 <html>
   <head>
-    <title>Your Awesome Webpage</title>
+    <title>Peter's Page</title>
+    <script type="application/javascript">
+   function draw(){
+    var canvas = document.getElementById("canvas");
+    var ctx = canvas.getContext("2d");
+    
+    ctx.fillStyle = "rgb(200,0,0)";
+    ctx.fillRect(10, 10, 55, 50);
+    
+    ctx.fillStyle = "rgba(0, 0, 200, 0.5)";
+    ctx.fillRect(30, 30, 55, 50); 
+   }
+    </script>
   </head>
   <body>
-    <p>Make something amazing with the web</p>
+    <canvas id="canvas" width="300" height="300"></canvas>
+    <p>A safe place. Under construction</p>
+    <button type="button" onclick="draw()">Draw Something</button>
   </body>
 </html>
