--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     ctx.fillStyle = "red";
     
     ctx.beginPath();
-    ctx.moveTo(50, 50);
+    ctx.moveTo(e.x, e.y);
     ctx.lineTo(150, 150);
     ctx.bezierCurveTo(60, 70, 60, 70, 70, 150);
-    ctx.lineTo(50, 50);
+    ctx.lineTo(e.x, e.y);
     ctx.stroke();
     
    }
