--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
    }
  
     </script>
+    <style type="text/css">
+    canvas {border: 1px solid black; }
+    </style>
   </head>
   <body>
-    <canvas id="canvas" width="300" height="300"></canvas>
-    <p>A safe place. Under construction</p>
-    <button type="button" onclick="draw()">Draw Something</button>
+    <canvas id="canvas" width="700" height="700"></canvas>
+    <p>Under construction</p>
   </body>
 </html>
