--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         
         ctx.beginPath();
         ctx.moveTo(350, 350);
-        ctx.quadraticCurveTo(x, y, 350, 300);
+        ctx.quadraticCurveTo(x/2, y/2, x, y);
         ctx.stroke();
     
    }
@@ -66,5 +66,6 @@
   <body>
     <canvas id="canvas" width="700" height="700"></canvas>
     <button type="button" onclick="clearScn()">Clear</button>
+    <p>Site Under Construction</p>
   </body>
 </html>
