Commented out all-color

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
             }
         }
         
+        setTimeout(circCallback("orange"), 1000);
+        setTimeout(circCallback("red"), 2000);
+        setTimeout(circCallback("white"), 3000);
+        
         /* Silly thing for doing all the colors!
         // 255/17 = 15. That's useful!
         // 17^3 = 4913
