--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
      Tempo: 
     <textarea id="tempoLabel" rows="1" cols="6" onchange="newTempo(this.value)"
     value=120.0> 120.0 </textarea></p>
-    <p id="bottomText">Site under construction. Please view in Google Chrome.</p>
+    <p id="bottomText">Site under construction. Please view in Google Chrome,
+    fullscreen.</p>
   </body>
 </html>
