--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!doctype html>
 <html>
   <head>
-    <title>Peter's Page</title>
-    <script type="text/javascript" src="frac_draw.js"> </script>
+    <title>Peter Lewis</title>
     <style type="text/css">
-    #canvas {border: 1px solid black; }
-    #tempoLabel {resize: none;}
-    .btn { font-size: 1.41em;}
     </style>
   </head>
   <body>
-    <canvas id="canvas" width="700" height="700"></canvas>
-    <canvas id="colSelect" width="300" height="700"></canvas> 
-    <p><button class="btn" id="clrbtn" type="button" onclick="clearScn()">
-        Clear</button>
-       <button class="btn"id="tapButton" type="button" onclick="updateTempo()">
-        Tap</button>
-     Tempo: 
-    <textarea id="tempoLabel" rows="1" cols="6" onchange="newTempo(this.value)"
-    value=120.0> 120.0 </textarea></p>
-    <p id="bottomText">Site under construction. Please view in Google Chrome,
-    fullscreen.</p>
+  <h4>
+    Hi, welcome to my website. Below are some projects I've been working on.
+    If you have problems with any of them, try using Google Chrome and viewing
+    fullscreen.
+  </h4>
+  <p>
+  <a href="fracdraw.html">Fractal Visualizer</a>
+  -- Make colorful, shifting, self-similar shapes
+  </p>
+  <p>
+  <a href="tenclock.html">Base 10 Clock</a>
+  -- What if we kept time in base 10?
+  </p>
+  <h4>
+  Feedback? Contact me at lewispossible@gmail.com. Thanks!
+  </h4>
   </body>
 </html>
