Added some sites

--- a/index.html
+++ b/index.html
@@ -19,8 +19,21 @@
   <a href="tenclock.html">Base 10 Clock</a>
   -- What if we kept time in base 10?
   </p>
+  <p>
+  <a href="http://www.thecodeabode.com">The Code Abode</a>
+  -- Mathematical musings
+  </p>
+  <p>
+  <a href="https://play.google.com/store/apps/details?id=com.pathfinder.games.bouncetospacelight&hl=en">
+  Bounce to Space!</a>
+  -- Game for Android
+  </p>
+  <p>
+  <a href="http://www.github.com/peterlew">My GitHub</a>
+  -- Fork these and other projects!
+  </p>
   <h4>
-  Feedback? Contact me at lewispossible@gmail.com. Thanks!
+  Feedback? Contact me at peter.joseph.lewis@gmail.com. Thanks!
   </h4>
   </body>
 </html>
