--- a/index.html
+++ b/index.html
@@ -12,23 +12,28 @@
     fullscreen.
   </h4>
   <p>
+  <img src="nimg/snow_sprite_solo.png" alt="">
   <a href="fracdraw.html">Fractal Visualizer</a>
   -- Make colorful, shifting, self-similar shapes
   </p>
   <p>
+  <img src="nimg/clock_1.png" alt="">
   <a href="tenclock.html">Base 10 Clock</a>
   -- What if we kept time in base 10?
   </p>
   <p>
+  <img src="nimg/codeabode.png" alt="">
   <a href="http://www.thecodeabode.com">The Code Abode</a>
   -- Mathematical musings
   </p>
   <p>
+  <img src="nimg/bounce.png" alt="">
   <a href="https://play.google.com/store/apps/details?id=com.pathfinder.games.bouncetospacelight&hl=en">
   Bounce to Space!</a>
   -- Game for Android
   </p>
   <p>
+  <img src="nimg/git.png" alt="">
   <a href="http://www.github.com/peterlew">My GitHub</a>
   -- Fork these and other projects!
   </p>
