Added erasure, track selection to visualizer

--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
   </h4>
   <p>
   <img src="nimg/snow_sprite_solo.png" alt="">
-  <a href="fracdraw.html">Fractal Visualizer</a>
+  <a href="fracdraw.html">Fractal Drawer</a>
   -- Make colorful, shifting, self-similar shapes
+  </p>
+  <p>
+  <img src="nimg/snow_sprite_dark.png" alt="">
+  <a href="visualizer.html">Fractal Visualizer</a>
+  -- Let the music do the work
   </p>
   <p>
   <img src="nimg/clock_1.png" alt="">
